--- a/gradle.properties
+++ b/gradle.properties
@@ -8,6 +8,8 @@ JAVAFX_MOBILE_VERSION = 1.3.16
 SIMPLEFX_VERSION=3.0.20
 CHARM_DOWN_VERSION = 3.5.0
 
+JAVAFX_VERSION=11.0.2
+
 JPRO_VERSION=2019.1.1
 JPRO_WEB_VERSION = 0.5.1
 
