--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,10 @@ stages:
   - compile
   - test
 
+before_install:
+  - if [[ "${TRAVIS_OS_NAME}" == linux ]]; then export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start; fi
+
+
 cache:
   directories:
     - $HOME/.gradle
