--- a/gradle.properties
+++ b/gradle.properties
@@ -1,23 +1,25 @@
 
 MYAPP_ENV = local
 
-JETTY_VERSION=9.4.19.v20190610
+JETTY_VERSION=9.4.28.v20200408
 
-JAVAFX_MOBILE_VERSION = 1.3.16
+JAVAFX_MOBILE_VERSION = 1.3.18
 
-SIMPLEFX_VERSION=3.0.20
+SIMPLEFX_VERSION=3.1.1
 CHARM_DOWN_VERSION = 3.5.0
 
-JAVAFX_VERSION=11.0.2
+JAVAFX_VERSION=14
 
-JPRO_VERSION=2019.1.1
-JPRO_WEB_VERSION = 0.5.1
+JPRO_VERSION=2019.2.3
+JPRO_WEB_VERSION = 0.7.0
 
-JNODES_VERSION = 0.4.11
+JNODES_VERSION = 0.5.0
 
-SIMPLEFX_REMOTING_VERSION = 0.7.7
+SIMPLEFX_REMOTING_VERSION = 0.9.2
 
-JPRO_CROSSPLATFORM = 0.8.0
+JPRO_CROSSPLATFORM = 1.0.0
 
-SCALA_VERSION=2.11
-SLICK_VERSION=3.2.1
+SCALA_VERSION=2.12
+SLICK_VERSION=3.2.3
+
+CSSFX_VERSION=11.2.1
