--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,8 @@
-System.setProperty("file.encoding", "UTF-8")
-
-project.ext {
-    env = MYAPP_ENV
-}
-
 buildscript {
     repositories {
         jcenter()
+        mavenCentral()
+        gradlePluginPortal()
 
         maven {
             url "http://sandec.bintray.com/repo"
@@ -16,10 +12,20 @@ buildscript {
     dependencies {
         classpath "SANDEC:simplefx-plugin-gradle:$SIMPLEFX_VERSION"
         classpath "com.sandec.jpro:jpro-plugin-gradle:$JPRO_VERSION"
-        classpath "org.javafxports:jfxmobile-plugin:$JAVAFX_MOBILE_VERSION"
         classpath 'org.gretty:gretty:2.3.1'
+        classpath 'org.openjfx:javafx-plugin:0.0.8'
+        classpath 'org.beryx.runtime:org.beryx.runtime.gradle.plugin:1.8.4'
     }
 }
+
+System.setProperty("file.encoding", "UTF-8")
+
+project.ext {
+    env = MYAPP_ENV
+}
+
+
+
 
 configure([project(':shared'),project(':client'),project(':server'),project(':mobile'),project(':web')]) {
     apply plugin: 'java'
@@ -44,22 +50,12 @@ configure([project(':shared'),project(':client'),project(':server'),project(':mo
 }
 
 configure([project(':shared')]) {
+    apply plugin: 'org.openjfx.javafxplugin'
 
-    apply plugin: 'com.google.osdetector'
-
-    ext.platform = osdetector.os == 'osx' ? 'mac' : osdetector.os == 'windows' ? 'win' : osdetector.os
-
-
-    dependencies {
-        compile "SANDEC:simplefx-remoting-shared:$SIMPLEFX_REMOTING_VERSION"
-
-
-        compile "org.openjfx:javafx-base:$JAVAFX_VERSION:$platform"
-        compile "org.openjfx:javafx-graphics:$JAVAFX_VERSION:$platform"
-        compile "org.openjfx:javafx-controls:$JAVAFX_VERSION:$platform"
-        compile "org.openjfx:javafx-fxml:$JAVAFX_VERSION:$platform"
-        compile "org.openjfx:javafx-media:$JAVAFX_VERSION:$platform"
-        compile "org.openjfx:javafx-web:$JAVAFX_VERSION:$platform"
+    javafx {
+        version = "$JAVAFX_VERSION"
+        configuration = 'compile'
+        modules = [ 'javafx.base', 'javafx.graphics', 'javafx.controls', 'javafx.fxml', 'javafx.media', 'javafx.web' ]
     }
 }
 
@@ -68,8 +64,10 @@ configure([project(':client')]) {
 
     apply plugin: 'com.sandec.jpro'
     //apply plugin: 'org.javafxports.jfxmobile'
+    apply plugin: 'org.beryx.runtime'
 
-    mainClassName = 'myapp.client.Starter'
+
+    mainClassName = 'myapp.client.Starter11'
 
     applicationDefaultJvmArgs = ["-Dconfig.file=../config/$env/client.conf"]
 
