--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,11 @@ os:
   - linux
 
 stages:
-  - compile
-  - test
+  # - compile
+  # - test
+  # - deploy
+  - publishWindows
+  - publishmac
 
 before_install:
   - if [ "${TRAVIS_OS_NAME}" == "linux" ]; then export DISPLAY=:99.0 && /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16; fi
@@ -20,10 +23,24 @@ cache:
   directories:
     - $HOME/.gradle
 
-jobs:
-  include:
-    - stage: compile
-      script:  ./gradlew clean jar
+    - os: osx
+      stage: publishmac
+      jdk:
+        - openjdk14
+      language: java
+      script:
+        - ./gradlew publishDMG --info
 
-    - stage: test
-      script:  ./gradlew server:test
+    - os: windows
+      stage: publishWindows
+      language: bash
+
+
+      install:
+        - choco install powershell
+        - choco install adoptopenjdk --version 14.0.1.7
+      #  - choco install innosetup # it's allready installed!
+
+      script:
+        - chmod +x releaseWindows.bat
+        - ./gradlew publishWIN --info
