--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,10 @@ buildscript {
     }
 }
 
+def appName = "app-template"
+
+version = APP_VERSION
+
 System.setProperty("file.encoding", "UTF-8")
 
 project.ext {
@@ -30,6 +34,8 @@ project.ext {
 configure([project(':shared'),project(':client'),project(':server'),project(':mobile'),project(':web')]) {
     apply plugin: 'java'
     apply plugin: 'de.sandec.simplefx'
+
+    version = APP_VERSION
 
     repositories {
         jcenter()
@@ -89,6 +95,12 @@ configure([project(':client')]) {
         jpackage {
             imageOptions = ['--icon', 'src/main/resources/myapp/logo.icns']
             imageName = "app-template-client"
+
+            if(org.gradle.internal.os.OperatingSystem.current().windows) {
+                installerType = 'msi'
+                // imageOptions = ['--win-console']
+                installerOptions = ['--win-per-user-install', '--win-dir-chooser', '--win-menu', '--win-shortcut']
+            }
         }
     }
 
@@ -169,4 +181,20 @@ configure([project(':mobile')]) {
     
     // Here on might add more project specific gluon configurations
 
+}
+
+def bintrayRepo = "sandec/private/"
+def bintrayKey = "-u$BINTRAY_USER:$BINTRAY_KEY"
+
+task publishDMG(type: Exec, dependsOn: ["client:jpackage"]) {
+
+  def args = ['curl', '-T', "client/build/jpackage/client-${version}.dmg", bintrayKey, "https://api.bintray.com/content/$bintrayRepo$appName/$version/$appName-${version}.dmg"]
+  println("args: " + args.toString().replace(","," "))
+  commandLine = args
+}
+task publishMSI(type: Exec, dependsOn: ["client:jpackage"]) {
+
+  def args = ['curl', '-T', "client/build/jpackage/client-${version}.msi", bintrayKey, "https://api.bintray.com/content/$bintrayRepo$appName/$version/$appName-${version}.msi"]
+  println("args: " + args.toString().replace(","," "))
+  commandLine = args
 }
