--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ jobs:
       stage: publishWindows
       language: bash
       env:
-        - JAVA_HOME=C:\\Program Files\\adoptopenjdk\\jdk-14.0.1+7
+        - JAVA_HOME=C:\\Program\ Files\\adoptopenjdk\\jdk-14.0.1+7
 
 
       install:
