fixed path to JDK

--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,7 @@ jobs:
       install:
         - choco install powershell
         - choco install adoptopenjdk --version 14.0.1.7
-        - export JAVA_HOME='C:\Program Files\adoptopenjdk\jdk-14.0.1+7'
+        - export JAVA_HOME='C:\Program Files\adoptopenjdk\jdk-14.0.1.7-hotspot'
         - ls 'C:\Program Files\adoptopenjdk'
         - dir 'C:\Program Files\adoptopenjdk'
       #  - choco install innosetup # it's allready installed!
