updated simplefx to a stable version

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ MYAPP_ENV = local
 
 JETTY_VERSION=9.4.28.v20200408
 
-SIMPLEFX_VERSION=3.2.0-SNAPSHOT
+SIMPLEFX_VERSION=3.2.0
 CHARM_DOWN_VERSION = 3.5.0
 
 JAVAFX_VERSION=14
