--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ jobs:
         - openjdk14
       language: java
       script:
-        - echo $JAVA_HOME
+        - export JAVA_HOME=$HOME/openjdk11
         - ./gradlew publishDMG --info  -Dorg.gradle.daemon=false
 
     - os: windows
