--- a/.travis.yml
+++ b/.travis.yml
@@ -30,12 +30,10 @@ before_install:
 jobs:
   include:
     - os: osx
+      osx_image: xcode11.4
       stage: publishmac
-      jdk:
-        - openjdk14
       language: java
       script:
-        - export JAVA_HOME=$HOME/openjdk14
         - ./gradlew publishDMG --info  -Dorg.gradle.daemon=false
 
     - os: windows
