--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,8 @@ buildscript {
         classpath "SANDEC:simplefx-plugin-gradle:$SIMPLEFX_VERSION"
         classpath "com.sandec.jpro:jpro-plugin-gradle:$JPRO_VERSION"
         classpath 'org.gretty:gretty:2.3.1'
-        classpath 'org.openjfx:javafx-plugin:0.0.8'
-        classpath 'org.beryx.runtime:org.beryx.runtime.gradle.plugin:1.8.4'
+        classpath 'org.openjfx:javafx-plugin:0.0.9'
+        classpath 'org.beryx.runtime:org.beryx.runtime.gradle.plugin:1.12.1'
     }
 }
 
@@ -84,7 +84,7 @@ configure([project(':client')]) {
         compile "com.sandec.jpro:jpro-crossplatform-desktop:$JPRO_CROSSPLATFORM"
         compile "SANDEC:jnodes:$JNODES_VERSION"
         compile "SANDEC:jnodes-devices:$JNODES_VERSION"
-        compile "org.fxmisc.cssfx:cssfx:$CSSFX_VERSION"
+        compile "fr.brouillard.oss:cssfx:$CSSFX_VERSION"
         compile "org.scalaj:scalaj-http_$SCALA_VERSION:2.4.2"
     }
 
@@ -148,8 +148,8 @@ configure([project(':web')]) {
         compile "com.sandec.jpro:jpro-crossplatform-jpro:$JPRO_CROSSPLATFORM"
     }
 
-    jproStartCommand {
-        jvmArgs "-Dconfig.file=./config/$env/client.conf"
+    jpro {
+        JVMArgs "-Dconfig.file=./config/$env/client.conf"
     }
 
     jpro {
